have a nice day!

--- a/indexes/nsc1025/121.md
+++ b/indexes/nsc1025/121.md
@@ -1,5 +1,9 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】联合国气候报告背后的真相危机](../../pages/nsc1025/n13168380.md) 
+#### [夏林：为什么一个简单的撤军 引来阿富汗之痛](../../pages/nsc1025/n13168744.md) 
+#### [【名家专栏】中共为何急于支持塔利班](../../pages/nsc1025/n13168452.md) 
+#### [沈舟：阿富汗局势剧变对美国未必是坏事](../../pages/nsc1025/n13166494.md) 
 #### [【有冇搞错】历史真的在重复吗？也谈阿富汗](../../pages/nsc1025/n13167431.md) 
 #### [袁斌：举报围攻张文宏的都是什么人？](../../pages/nsc1025/n13167731.md) 
 #### [杨威：王毅趁阿富汗混乱对美再扮战狼](../../pages/nsc1025/n13167462.md) 
@@ -26,10 +30,6 @@
 #### [韦拓：中南海为何高调炒作“浙江模式”？](../../pages/nsc1025/n13161859.md) 
 #### [颜丹：“七夕”被要求“颂党恩”很荒谬](../../pages/nsc1025/n13164032.md) 
 #### [田云：疫情严重？解读中共卫健委最新发布会](../../pages/nsc1025/n13163312.md) 
-#### [王友群：25个国家力挺加拿大的四大看点](../../pages/nsc1025/n13163081.md) 
-#### [中印军力对比 矛盾难解 胜负难分](../../pages/nsc1025/n13161475.md) 
-#### [郝平：北戴河会后 党媒为何高喊习核心？](../../pages/nsc1025/n13162607.md) 
-#### [任重：更换新疫苗 国药科兴灭活疫苗无效？](../../pages/nsc1025/n13162571.md) 
 
 ---
-#### 第 [ [120](./120.md) / [119](./119.md) / [118](./118.md) / [117](./117.md) / [116](./116.md) / [115](./115.md) / [114](./114.md) / [113](./113.md) ] 页
+#### 第 [ [121](./121.md) / [120](./120.md) / [119](./119.md) / [118](./118.md) / [117](./117.md) / [116](./116.md) / [115](./115.md) / [114](./114.md) ] 页
