--- a/indexes/nsc993/60.md
+++ b/indexes/nsc993/60.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】张文宏和钟南山再次验证了什么？](../../pages/nsc993/n13167785.md) 
 #### [【网海拾贝】从郑州到南京 卫健委主任竟都是外行](../../pages/nsc993/n13165504.md) 
 #### [醒脑汤：鹊桥仙·数字货币（外一首）](../../pages/nsc993/n13165652.md) 
 #### [马琪凯：女权主义是性别问题的答案吗？女权主义底层的问题所在](../../pages/nsc993/n13165599.md) 
@@ -29,7 +30,6 @@
 #### [余英时：警惕文革一套借民族主义还魂](../../pages/nsc993/n13145214.md) 
 #### [袁斌：官媒称今年离婚登记人数降五成遭群嘲](../../pages/nsc993/n13144883.md) 
 #### [【网海拾贝】中共是僵尸之最，笑话的巅峰](../../pages/nsc993/n13143217.md) 
-#### [【网海拾贝】被饲养肥的，往往是祭祀品！](../../pages/nsc993/n13140755.md) 
 
 ---
 #### 第 [ [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) ] 页
