--- a/indexes/nsc993/60.md
+++ b/indexes/nsc993/60.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中共对病毒溯源为何死不认账？](../../pages/nsc993/n13172875.md) 
+#### [醒脑汤：青玉案·小康社会（外一首）](../../pages/nsc993/n13172072.md) 
 #### [【网海拾贝】去年李医生，今年张医生](../../pages/nsc993/n13170405.md) 
 #### [袁斌：胡锡进点评阿富汗变局 网友痛批](../../pages/nsc993/n13170201.md) 
 #### [【网海拾贝】张文宏和钟南山再次验证了什么？](../../pages/nsc993/n13167785.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】如果这是正道，谁告诉我邪恶是什么](../../pages/nsc993/n13147092.md) 
 #### [袁斌：许多国家讨厌中国是因为中国强大了？](../../pages/nsc993/n13147558.md) 
 #### [【网海拾贝】习近平对拜登幻想破灭？](../../pages/nsc993/n13145171.md) 
-#### [关山：美国令中概股自曝VIE结构 中共为何突然改口风？](../../pages/nsc993/n13144903.md) 
-#### [余英时：警惕文革一套借民族主义还魂](../../pages/nsc993/n13145214.md) 
 
 ---
 #### 第 [ [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) ] 页
