--- a/indexes/nsc993/60.md
+++ b/indexes/nsc993/60.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】塔利班和港大学生，谁才是“恐怖分子”？](../../pages/nsc993/n13175838.md) 
+#### [千百度：大陆多地变相强制接种疫苗 民众强烈反感](../../pages/nsc993/n13175624.md) 
 #### [【网海拾贝】中共对病毒溯源为何死不认账？](../../pages/nsc993/n13172875.md) 
 #### [醒脑汤：青玉案·小康社会（外一首）](../../pages/nsc993/n13172072.md) 
 #### [【网海拾贝】去年李医生，今年张医生](../../pages/nsc993/n13170405.md) 
@@ -28,8 +30,6 @@
 #### [余英时：挽救记忆的伟大工程](../../pages/nsc993/n13148828.md) 
 #### [邢鉴：德国应停止遣返刘冰 重新启动调查](../../pages/nsc993/n13148274.md) 
 #### [【网海拾贝】如果这是正道，谁告诉我邪恶是什么](../../pages/nsc993/n13147092.md) 
-#### [袁斌：许多国家讨厌中国是因为中国强大了？](../../pages/nsc993/n13147558.md) 
-#### [【网海拾贝】习近平对拜登幻想破灭？](../../pages/nsc993/n13145171.md) 
 
 ---
 #### 第 [ [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) ] 页
