have a nice day!

--- a/indexes/nsc993/60.md
+++ b/indexes/nsc993/60.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [陈健民：吹尽狂沙始到金](../../pages/nsc993/n13178052.md) 
+#### [千百度：你爱祖国、爱党，可祖国和党爱你吗？](../../pages/nsc993/n13177820.md) 
+#### [吐为快：钗头凤·老韭与新韭](../../pages/nsc993/n13177699.md) 
 #### [【网海拾贝】塔利班和港大学生，谁才是“恐怖分子”？](../../pages/nsc993/n13175838.md) 
 #### [千百度：大陆多地变相强制接种疫苗 民众强烈反感](../../pages/nsc993/n13175624.md) 
 #### [【网海拾贝】中共对病毒溯源为何死不认账？](../../pages/nsc993/n13172875.md) 
@@ -27,9 +30,6 @@
 #### [【网海拾贝】郑州4000辆泡水车的主人去哪了？](../../pages/nsc993/n13149792.md) 
 #### [林泉：党总是在人民的灾难中双赢](../../pages/nsc993/n13149232.md) 
 #### [理悟：清零痴梦破](../../pages/nsc993/n13149216.md) 
-#### [余英时：挽救记忆的伟大工程](../../pages/nsc993/n13148828.md) 
-#### [邢鉴：德国应停止遣返刘冰 重新启动调查](../../pages/nsc993/n13148274.md) 
-#### [【网海拾贝】如果这是正道，谁告诉我邪恶是什么](../../pages/nsc993/n13147092.md) 
 
 ---
 #### 第 [ [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) ] 页
