--- a/indexes/nsc1028/55.md
+++ b/indexes/nsc1028/55.md
@@ -1,5 +1,8 @@
 ### 纪元评论：以史为鉴
 ---
+#### [王友群：毛泽东发动大跃进 饿死四千万人](../../pages/nsc1028/n13177158.md) 
+#### [中共罪行录之四十八：死囚家属学习班](../../pages/nsc1028/n13177975.md) 
+#### [中共罪行录之四十七：被割喉的张志新们](../../pages/nsc1028/n13175568.md) 
 #### [中共罪行录之四十六：红歌作者的悲惨结果](../../pages/nsc1028/n13172779.md) 
 #### [王友群：因毛泽东一句话 部长张霖之文革被打死](../../pages/nsc1028/n13161711.md) 
 #### [袁斌：罗素对“俄国革命”的洞见](../../pages/nsc1028/n13159737.md) 
@@ -27,9 +30,6 @@
 #### [中共罪行录之三十七：卫生纸之祸](../../pages/nsc1028/n13096576.md) 
 #### [中共罪行录之三十六：西藏的文革惨剧](../../pages/nsc1028/n13095149.md) 
 #### [颜智华：落草为寇的朱毛武装为什么能立足并壮大（2）](../../pages/nsc1028/n13095103.md) 
-#### [颜智华：落草为寇的朱毛为何能立足并壮大（1）](../../pages/nsc1028/n13093178.md) 
-#### [中共罪行录之三十五：乡村大游斗     ](../../pages/nsc1028/n13093007.md) 
-#### [中共罪行录之三十四：大饥荒时代的悲惨故事](../../pages/nsc1028/n13087993.md) 
 
 ---
 #### 第 [ [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) ] 页
