--- a/indexes/nsc1025/122.md
+++ b/indexes/nsc1025/122.md
@@ -1,5 +1,16 @@
 ### 纪元评论：时政评论
 ---
+#### [周晓辉：塔利班与中共有共性 两者都靠鸦片发展](../../pages/nsc1025/n13179994.md) 
+#### [张菁： “码农”怎么成了“新生代农民工”？](../../pages/nsc1025/n13179757.md) 
+#### [古德：中共公安国保系统的罪恶](../../pages/nsc1025/n13179310.md) 
+#### [清荷：那些“悦目”的宣传](../../pages/nsc1025/n13179261.md) 
+#### [觅真：中共首任“610办公室”主任王茂林的罪恶被明慧网曝光](../../pages/nsc1025/n13179214.md) 
+#### [田云：河南官场会发生“大地震”吗？](../../pages/nsc1025/n13179043.md) 
+#### [王友群：全球支持法轮功反迫害的人越来越多](../../pages/nsc1025/n13178865.md) 
+#### [杨威：阿富汗人有机会逃离 中国人呢？](../../pages/nsc1025/n13178941.md) 
+#### [沈舟：美军无人车试射导弹击中靶船](../../pages/nsc1025/n13178657.md) 
+#### [古啸：不让数据说话？中共严防数字灰犀牛](../../pages/nsc1025/n13178630.md) 
+#### [周田：美军印太司令部有多大？](../../pages/nsc1025/n13177149.md) 
 #### [古风：中共重拾“共同富裕论”纯属自欺欺人](../../pages/nsc1025/n13177804.md) 
 #### [【名家专栏】台湾不等于阿富汗](../../pages/nsc1025/n13178105.md) 
 #### [【名家专栏】因疫情 中共欠世界35万亿美元](../../pages/nsc1025/n13178100.md) 
@@ -19,17 +30,6 @@
 #### [谢田：新版打土豪为何注定会失败？](../../pages/nsc1025/n13174297.md) 
 #### [王赫：中共的“共同富裕”这张饼能充饥吗？](../../pages/nsc1025/n13174247.md) 
 #### [岳山：汪洋突然变高调 北戴河秘定抢钱计划？](../../pages/nsc1025/n13174605.md) 
-#### [古啸：中共忧心忡忡 疑无底气承认阿塔政权](../../pages/nsc1025/n13174652.md) 
-#### [王友群：中共二十大前习近平最担心的是军队](../../pages/nsc1025/n13174330.md) 
-#### [杨威：中共故意嘲笑美政府 拜习会还要安排吗](../../pages/nsc1025/n13174501.md) 
-#### [【名家专栏】美元与黄金脱钩引全球信贷扩张](../../pages/nsc1025/n13173571.md) 
-#### [【名家专栏】告密在澳大利亚已成新文化？](../../pages/nsc1025/n13170928.md) 
-#### [【名家专栏】中共三管齐下的核生化武器战略](../../pages/nsc1025/n13173563.md) 
-#### [【有冇搞错】摆脱中共 韩国急欲归队](../../pages/nsc1025/n13171605.md) 
-#### [沈舟：美弃阿保台 中共欲趁乱挑衅难](../../pages/nsc1025/n13172318.md) 
-#### [王友群：台湾不是阿富汗 中共盘算恐失算](../../pages/nsc1025/n13171704.md) 
-#### [东方觉：从大陆弃婴卖婴说起](../../pages/nsc1025/n13172016.md) 
-#### [周晓辉：许家印会步马云后尘吗？](../../pages/nsc1025/n13171636.md) 
 
 ---
 #### 第 [ [122](./122.md) / [121](./121.md) / [120](./120.md) / [119](./119.md) / [118](./118.md) / [117](./117.md) / [116](./116.md) / [115](./115.md) ] 页
