--- a/indexes/nsc1028/55.md
+++ b/indexes/nsc1028/55.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [我们从小到大学到的历史哪些是假的（1）](../../pages/nsc1028/n13181650.md) 
+#### [观雨堂主：红色鹰犬的下场](../../pages/nsc1028/n13180822.md) 
 #### [王友群：毛泽东发动大跃进 饿死四千万人](../../pages/nsc1028/n13177158.md) 
 #### [中共罪行录之四十八：死囚家属学习班](../../pages/nsc1028/n13177975.md) 
 #### [中共罪行录之四十七：被割喉的张志新们](../../pages/nsc1028/n13175568.md) 
@@ -28,8 +30,6 @@
 #### [中共罪行录之三十八：现代“窦娥冤”](../../pages/nsc1028/n13099553.md) 
 #### [颜智华：共产党在苏区的烧杀抢反人类犯罪（1）](../../pages/nsc1028/n13096652.md) 
 #### [中共罪行录之三十七：卫生纸之祸](../../pages/nsc1028/n13096576.md) 
-#### [中共罪行录之三十六：西藏的文革惨剧](../../pages/nsc1028/n13095149.md) 
-#### [颜智华：落草为寇的朱毛武装为什么能立足并壮大（2）](../../pages/nsc1028/n13095103.md) 
 
 ---
 #### 第 [ [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) ] 页
