have a nice day!

--- a/indexes/nsc1025/123.md
+++ b/indexes/nsc1025/123.md
@@ -1,5 +1,14 @@
 ### 纪元评论：时政评论
 ---
+#### [程晓农：阿富汗——“大国泥潭”换埋谁？](../../pages/nsc1025/n13185042.md) 
+#### [金言：习近平要推翻“新三座大山”？](../../pages/nsc1025/n13185068.md) 
+#### [【名家专栏】喀布尔效应和新邪恶轴心](../../pages/nsc1025/n13184460.md) 
+#### [王赫：欲加入CPTPP，北京打何算盘？](../../pages/nsc1025/n13183070.md) 
+#### [【有冇搞错】UN气候变化报告 政治大于科学](../../pages/nsc1025/n13183633.md) 
+#### [【名家专栏】我为什么反对批判性种族理论](../../pages/nsc1025/n13179356.md) 
+#### [古风：人民币离“断崖式贬值”还有多远？](../../pages/nsc1025/n13183805.md) 
+#### [林忌：急停港《反外国制裁法》北京害怕经济风险？](../../pages/nsc1025/n13182899.md) 
+#### [王友群：汪洋可能成习近平的接班人吗？](../../pages/nsc1025/n13182734.md) 
 #### [杨宁：公安厅副厅长溺亡疑点多 涉落马高官](../../pages/nsc1025/n13182458.md) 
 #### [【名家专栏】美国早应将塔利班定为恐怖组织](../../pages/nsc1025/n13181966.md) 
 #### [【名家专栏】美中之间印太地区代理人的博弈](../../pages/nsc1025/n13180974.md) 
@@ -21,15 +30,6 @@
 #### [王友群：全球支持法轮功反迫害的人越来越多](../../pages/nsc1025/n13178865.md) 
 #### [杨威：阿富汗人有机会逃离 中国人呢？](../../pages/nsc1025/n13178941.md) 
 #### [沈舟：美军无人车试射导弹击中靶船](../../pages/nsc1025/n13178657.md) 
-#### [古啸：不让数据说话？中共严防数字灰犀牛](../../pages/nsc1025/n13178630.md) 
-#### [周田：美军印太司令部有多大？](../../pages/nsc1025/n13177149.md) 
-#### [古风：中共重拾“共同富裕论”纯属自欺欺人](../../pages/nsc1025/n13177804.md) 
-#### [【名家专栏】台湾不等于阿富汗](../../pages/nsc1025/n13178105.md) 
-#### [【名家专栏】因疫情 中共欠世界35万亿美元](../../pages/nsc1025/n13178100.md) 
-#### [项云：中共迫害人民不遗余力](../../pages/nsc1025/n13177770.md) 
-#### [诸葛九郎：当“人类灵魂的工程师”被“扫黄打黑”](../../pages/nsc1025/n13177704.md) 
-#### [颜纯钩：共产党的终极目标就是“共产”](../../pages/nsc1025/n13177661.md) 
-#### [田云：中共调查组入郑州 动员会有“看点”](../../pages/nsc1025/n13177274.md) 
 
 ---
 #### 第 [ [123](./123.md) / [122](./122.md) / [121](./121.md) / [120](./120.md) / [119](./119.md) / [118](./118.md) / [117](./117.md) / [116](./116.md) ] 页
