--- a/indexes/nsc993/60.md
+++ b/indexes/nsc993/60.md
@@ -1,5 +1,11 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】阿富汗将变成谁的坟场？](../../pages/nsc993/n13183968.md) 
+#### [千百度：疫情防控中，扬州人绝望麻木的生活](../../pages/nsc993/n13183902.md) 
+#### [袁斌：“8月5日打的疫苗，8月9日人就走了”](../../pages/nsc993/n13183741.md) 
+#### [请世界各国首脑重温列宁的“绳套”](../../pages/nsc993/n13183266.md) 
+#### [陈达：中共“代表阿富汗人民”解](../../pages/nsc993/n13183050.md) 
+#### [谢燕益：就许娜案致北京市政法委书记](../../pages/nsc993/n13182701.md) 
 #### [【网海拾贝】李克强视察小区，每家每户三个警察](../../pages/nsc993/n13181691.md) 
 #### [祝君安：中共病毒之思想探源](../../pages/nsc993/n13180924.md) 
 #### [梁海斌：一个从囚徒到海员的故事](../../pages/nsc993/n13180304.md) 
@@ -24,12 +30,6 @@
 #### [马琪凯：女权主义是性别问题的答案吗？女权主义底层的问题所在](../../pages/nsc993/n13165599.md) 
 #### [袁斌：《人民日报》说病毒来自意大利，你信吗？](../../pages/nsc993/n13163255.md) 
 #### [吐为快：狼羊联颁《吃肉法》](../../pages/nsc993/n13163403.md) 
-#### [金浴凤：渔歌子·党政联合收割机](../../pages/nsc993/n13163400.md) 
-#### [【网海拾贝】“1460天，我的眼泪早已流尽”](../../pages/nsc993/n13162635.md) 
-#### [【网海拾贝】世卫喊话北京：交出所有新冠病例数据](../../pages/nsc993/n13161920.md) 
-#### [林泉：不要与CCP扯闲上当](../../pages/nsc993/n13161954.md) 
-#### [【网海拾贝】敲锣女还会有，但方方不一定会出现了](../../pages/nsc993/n13159819.md) 
-#### [袁斌：对于月仙离世的反思](../../pages/nsc993/n13157072.md) 
 
 ---
 #### 第 [ [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) ] 页
