--- a/indexes/nsc993/61.md
+++ b/indexes/nsc993/61.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [对话：郑州水灾是“神在为我们显现末世”](../../pages/nsc993/n13187070.md) 
+#### [新州：大疫何日止？中共灭亡时](../../pages/nsc993/n13186301.md) 
 #### [专访李沐阳：以诚相待 将心比心](../../pages/nsc993/n13180171.md) 
 #### [【网海拾贝】阿富汗将变成谁的坟场？](../../pages/nsc993/n13183968.md) 
 #### [千百度：疫情防控中，扬州人绝望麻木的生活](../../pages/nsc993/n13183902.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】张文宏和钟南山再次验证了什么？](../../pages/nsc993/n13167785.md) 
 #### [【网海拾贝】从郑州到南京 卫健委主任竟都是外行](../../pages/nsc993/n13165504.md) 
 #### [醒脑汤：鹊桥仙·数字货币（外一首）](../../pages/nsc993/n13165652.md) 
-#### [马琪凯：女权主义是性别问题的答案吗？女权主义底层的问题所在](../../pages/nsc993/n13165599.md) 
-#### [袁斌：《人民日报》说病毒来自意大利，你信吗？](../../pages/nsc993/n13163255.md) 
 
 ---
-#### 第 [ [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) ] 页
+#### 第 [ [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) ] 页
