have a nice day!

--- a/indexes/nsc1025/124.md
+++ b/indexes/nsc1025/124.md
@@ -1,5 +1,10 @@
 ### 纪元评论：时政评论
 ---
+#### [谢田：国家战略层面三次分配是彻底的邪恶](../../pages/nsc1025/n13190280.md) 
+#### [【名家专栏】君主立宪制民主或使阿富汗稳定](../../pages/nsc1025/n13189566.md) 
+#### [夏林：阿塔与阿共 中共想洗白塔利班 顺便洗白自己](../../pages/nsc1025/n13189893.md) 
+#### [王赫：中共欲加入CPTPP 美握重要筹码](../../pages/nsc1025/n13188119.md) 
+#### [王友群：习近平为何17个多月没出国访问？](../../pages/nsc1025/n13187771.md) 
 #### [【名家专栏】将婚姻摆上重要议程是件好事](../../pages/nsc1025/n13187082.md) 
 #### [杨威：习近平与普京 对阿富汗不同调](../../pages/nsc1025/n13187580.md) 
 #### [颜丹：个税收入越高，老百姓收入越高？](../../pages/nsc1025/n13187591.md) 
@@ -25,11 +30,6 @@
 #### [王友群：汪洋可能成习近平的接班人吗？](../../pages/nsc1025/n13182734.md) 
 #### [杨宁：公安厅副厅长溺亡疑点多 涉落马高官](../../pages/nsc1025/n13182458.md) 
 #### [【名家专栏】美国早应将塔利班定为恐怖组织](../../pages/nsc1025/n13181966.md) 
-#### [【名家专栏】美中之间印太地区代理人的博弈](../../pages/nsc1025/n13180974.md) 
-#### [颜丹：杭州楼市带头搞“共同富裕” 中介遭殃](../../pages/nsc1025/n13182427.md) 
-#### [【名家专栏】奥运会 尊重与言论自由](../../pages/nsc1025/n13179667.md) 
-#### [郝 平：之江新星忽落马 反习大火延烧习家军？](../../pages/nsc1025/n13181766.md) 
-#### [陈思敏：亚马逊封店潮不只是冲击中共外贸](../../pages/nsc1025/n13181748.md) 
 
 ---
-#### 第 [ [123](./123.md) / [122](./122.md) / [121](./121.md) / [120](./120.md) / [119](./119.md) / [118](./118.md) / [117](./117.md) / [116](./116.md) ] 页
+#### 第 [ [124](./124.md) / [123](./123.md) / [122](./122.md) / [121](./121.md) / [120](./120.md) / [119](./119.md) / [118](./118.md) / [117](./117.md) ] 页
