have a nice day!

--- a/indexes/nsc1025/124.md
+++ b/indexes/nsc1025/124.md
@@ -1,5 +1,16 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】疫情复燃 封锁拖累中国经济](../../pages/nsc1025/n13192125.md) 
+#### [【名家专栏】习近平财富再分配令投资者却步](../../pages/nsc1025/n13192250.md) 
+#### [袁斌：中共忽悠民众 在接种疫苗上玩双簧](../../pages/nsc1025/n13191412.md) 
+#### [王赫：美认定星岛日报为外国代理人 这远不够](../../pages/nsc1025/n13190753.md) 
+#### [杨威：《星岛日报》外还有多少中共代理人](../../pages/nsc1025/n13190152.md) 
+#### [石铭：四川省当局仍在残酷迫害法轮功学员](../../pages/nsc1025/n13190861.md) 
+#### [钟原：追责中共隐瞒疫情才能查清病毒源头](../../pages/nsc1025/n13190564.md) 
+#### [王友群：中共重压立陶宛 欧美力挺立陶宛](../../pages/nsc1025/n13190607.md) 
+#### [周晓辉：塔利班露出恐怖面目 打脸北京政权](../../pages/nsc1025/n13190627.md) 
+#### [【名家专栏】可以避免的美式阿富汗灾难](../../pages/nsc1025/n13189518.md) 
+#### [【名家专栏】拜登必须反对塔利班打压人权](../../pages/nsc1025/n13189597.md) 
 #### [谢田：国家战略层面三次分配是彻底的邪恶](../../pages/nsc1025/n13190280.md) 
 #### [【名家专栏】君主立宪制民主或使阿富汗稳定](../../pages/nsc1025/n13189566.md) 
 #### [夏林：阿塔与阿共 中共想洗白塔利班 顺便洗白自己](../../pages/nsc1025/n13189893.md) 
@@ -19,17 +30,6 @@
 #### [钟原：习近平河北考察不寻常报导的背后](../../pages/nsc1025/n13185175.md) 
 #### [古啸：放倒张文宏、拥抱塔利班和共同富裕](../../pages/nsc1025/n13185099.md) 
 #### [周晓辉：接种第三针疫苗 恐引发ADE效应](../../pages/nsc1025/n13185153.md) 
-#### [程晓农：阿富汗——“大国泥潭”换埋谁？](../../pages/nsc1025/n13185042.md) 
-#### [金言：习近平要推翻“新三座大山”？](../../pages/nsc1025/n13185068.md) 
-#### [【名家专栏】喀布尔效应和新邪恶轴心](../../pages/nsc1025/n13184460.md) 
-#### [王赫：欲加入CPTPP，北京打何算盘？](../../pages/nsc1025/n13183070.md) 
-#### [【有冇搞错】UN气候变化报告 政治大于科学](../../pages/nsc1025/n13183633.md) 
-#### [【名家专栏】我为什么反对批判性种族理论](../../pages/nsc1025/n13179356.md) 
-#### [古风：人民币离“断崖式贬值”还有多远？](../../pages/nsc1025/n13183805.md) 
-#### [林忌：急停港《反外国制裁法》北京害怕经济风险？](../../pages/nsc1025/n13182899.md) 
-#### [王友群：汪洋可能成习近平的接班人吗？](../../pages/nsc1025/n13182734.md) 
-#### [杨宁：公安厅副厅长溺亡疑点多 涉落马高官](../../pages/nsc1025/n13182458.md) 
-#### [【名家专栏】美国早应将塔利班定为恐怖组织](../../pages/nsc1025/n13181966.md) 
 
 ---
 #### 第 [ [124](./124.md) / [123](./123.md) / [122](./122.md) / [121](./121.md) / [120](./120.md) / [119](./119.md) / [118](./118.md) / [117](./117.md) ] 页
