--- a/indexes/nsc993/61.md
+++ b/indexes/nsc993/61.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】习近平为何拿“之江新军”开刀？](../../pages/nsc993/n13193979.md) 
 #### [【网海拾贝】躲得过中共病毒，躲不过中共疫苗](../../pages/nsc993/n13191479.md) 
 #### [颜纯钩﻿：浩气贯天，足铭青史——读黄浩铭的“法庭陈情书”](../../pages/nsc993/n13190931.md) 
 #### [醒脑汤：中共，你活的真累](../../pages/nsc993/n13190907.md) 
@@ -29,7 +30,6 @@
 #### [千百度：你爱祖国、爱党，可祖国和党爱你吗？](../../pages/nsc993/n13177820.md) 
 #### [吐为快：钗头凤·老韭与新韭](../../pages/nsc993/n13177699.md) 
 #### [【网海拾贝】塔利班和港大学生，谁才是“恐怖分子”？](../../pages/nsc993/n13175838.md) 
-#### [千百度：大陆多地变相强制接种疫苗 民众强烈反感](../../pages/nsc993/n13175624.md) 
 
 ---
 #### 第 [ [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) ] 页
