--- a/indexes/nsc1025/125.md
+++ b/indexes/nsc1025/125.md
@@ -1,5 +1,10 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】中共黑手全面伸进企业](../../pages/nsc1025/n13195715.md) 
+#### [田云：强推疫苗恐入误区 惩罚未接种者合理吗](../../pages/nsc1025/n13195396.md) 
+#### [周晓辉： 习近平近期电话外交成效几何？](../../pages/nsc1025/n13195846.md) 
+#### [觅真：律师要求无罪释放 法院冤判十四年 这是哪家的王法？](../../pages/nsc1025/n13195363.md) 
+#### [田云：白宫病毒溯源报告出炉 中共为何不安？](../../pages/nsc1025/n13195177.md) 
 #### [沈舟：美军是否准备打一场半战争](../../pages/nsc1025/n13194792.md) 
 #### [郝平：整肃流量明星 曝习近平四大忧患](../../pages/nsc1025/n13194813.md) 
 #### [【名家专栏】阿富汗并非“帝国坟场”](../../pages/nsc1025/n13194323.md) 
@@ -25,11 +30,6 @@
 #### [周晓辉：塔利班露出恐怖面目 打脸北京政权](../../pages/nsc1025/n13190627.md) 
 #### [【名家专栏】可以避免的美式阿富汗灾难](../../pages/nsc1025/n13189518.md) 
 #### [【名家专栏】拜登必须反对塔利班打压人权](../../pages/nsc1025/n13189597.md) 
-#### [谢田：国家战略层面三次分配是彻底的邪恶](../../pages/nsc1025/n13190280.md) 
-#### [【名家专栏】君主立宪制民主或使阿富汗稳定](../../pages/nsc1025/n13189566.md) 
-#### [夏林：阿塔与阿共 中共想洗白塔利班 顺便洗白自己](../../pages/nsc1025/n13189893.md) 
-#### [王赫：中共欲加入CPTPP 美握重要筹码](../../pages/nsc1025/n13188119.md) 
-#### [王友群：习近平为何17个多月没出国访问？](../../pages/nsc1025/n13187771.md) 
 
 ---
-#### 第 [ [124](./124.md) / [123](./123.md) / [122](./122.md) / [121](./121.md) / [120](./120.md) / [119](./119.md) / [118](./118.md) / [117](./117.md) ] 页
+#### 第 [ [125](./125.md) / [124](./124.md) / [123](./123.md) / [122](./122.md) / [121](./121.md) / [120](./120.md) / [119](./119.md) / [118](./118.md) ] 页
