--- a/indexes/nsc993/61.md
+++ b/indexes/nsc993/61.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】疫苗无人担责 一切后果都由个人承担](../../pages/nsc993/n13197255.md) 
+#### [金浴凤：红色基因赋](../../pages/nsc993/n13197155.md) 
 #### [【网海拾贝】“电话哥”死磕当局 “双码联查”叫停](../../pages/nsc993/n13194888.md) 
 #### [看“孔融让梨”想起小时经历的大饥荒年代](../../pages/nsc993/n13195778.md) 
 #### [理悟：黄鹤哀哀旋不归](../../pages/nsc993/n13195355.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】华春莹为何特别幸福，感受不到压迫？](../../pages/nsc993/n13180239.md) 
 #### [千百度：“90后”结婚率只有10%多 “元芳，你怎么看”](../../pages/nsc993/n13179191.md) 
 #### [伍新：中共已经没明天](../../pages/nsc993/n13179249.md) 
-#### [袁斌：三次分配？网友：“劫富不济贫”](../../pages/nsc993/n13179137.md) 
-#### [【网海拾贝】很多人都在举报自己朋友圈里的人](../../pages/nsc993/n13178661.md) 
 
 ---
 #### 第 [ [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) ] 页
