have a nice day!

--- a/indexes/nsc1025/126.md
+++ b/indexes/nsc1025/126.md
@@ -1,5 +1,7 @@
 ### 纪元评论：时政评论
 ---
+#### [袁斌：官媒齐转毛左文章 新文革开始的信号](../../pages/nsc1025/n13202207.md) 
+#### [李正宽：中纪委插手娱乐圈 背后藏何玄机？](../../pages/nsc1025/n13202149.md) 
 #### [沈舟：美军透露西太平洋作战的最后拼图](../../pages/nsc1025/n13201563.md) 
 #### [钟原：中共政治局会议为习连任铺路？](../../pages/nsc1025/n13200827.md) 
 #### [杨宁：前财政部长金人庆蹊跷死 东窗事发？](../../pages/nsc1025/n13201091.md) 
@@ -28,8 +30,6 @@
 #### [【名家专栏】中共黑手全面伸进企业](../../pages/nsc1025/n13195715.md) 
 #### [田云：强推疫苗恐入误区 惩罚未接种者合理吗](../../pages/nsc1025/n13195396.md) 
 #### [周晓辉： 习近平近期电话外交成效几何？](../../pages/nsc1025/n13195846.md) 
-#### [觅真：律师要求无罪释放 法院冤判十四年 这是哪家的王法？](../../pages/nsc1025/n13195363.md) 
-#### [田云：白宫病毒溯源报告出炉 中共为何不安？](../../pages/nsc1025/n13195177.md) 
 
 ---
-#### 第 [ [125](./125.md) / [124](./124.md) / [123](./123.md) / [122](./122.md) / [121](./121.md) / [120](./120.md) / [119](./119.md) / [118](./118.md) ] 页
+#### 第 [ [126](./126.md) / [125](./125.md) / [124](./124.md) / [123](./123.md) / [122](./122.md) / [121](./121.md) / [120](./120.md) / [119](./119.md) ] 页
