--- a/indexes/nsc1028/55.md
+++ b/indexes/nsc1028/55.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [袁斌：我们从小到大学到的历史哪些是假的（4）](../../pages/nsc1028/n13204742.md) 
 #### [吴明：中共历届“克格勃”的命运（下）](../../pages/nsc1028/n13200899.md) 
 #### [吴明：中共历届“克格勃”的命运（上）](../../pages/nsc1028/n13198300.md) 
 #### [百年红祸 中华“亡国”](../../pages/nsc1028/n13192762.md) 
@@ -29,7 +30,6 @@
 #### [苏晓康：垮坝](../../pages/nsc1028/n13109759.md) 
 #### [颜智华：“剿共战争”成派系斗争筹码 红军逃生作乱  ](../../pages/nsc1028/n13109642.md) 
 #### [中共罪行录之四十一：剃光头也有罪](../../pages/nsc1028/n13107819.md) 
-#### [颜智华：中原大战结束 为何共产党还能在赣南闽西折腾4年](../../pages/nsc1028/n13103846.md) 
 
 ---
 #### 第 [ [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) ] 页
