--- a/indexes/nsc993/61.md
+++ b/indexes/nsc993/61.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】西方对中共的误判与中共对西方的误判](../../pages/nsc993/n13204854.md) 
+#### [国学大师季羡林关于文革的四个“天问”](../../pages/nsc993/n13204917.md) 
 #### [【网海拾贝】“有钱的缺良心，有良心的缺钱”](../../pages/nsc993/n13202291.md) 
 #### [袁斌：“蔡莉去哪了？” 答案来了](../../pages/nsc993/n13199329.md) 
 #### [中共选举制度有张维为说的那么好吗？](../../pages/nsc993/n13199399.md) 
@@ -28,8 +30,6 @@
 #### [陈达：中共“代表阿富汗人民”解](../../pages/nsc993/n13183050.md) 
 #### [谢燕益：就许娜案致北京市政法委书记](../../pages/nsc993/n13182701.md) 
 #### [【网海拾贝】李克强视察小区，每家每户三个警察](../../pages/nsc993/n13181691.md) 
-#### [祝君安：中共病毒之思想探源](../../pages/nsc993/n13180924.md) 
-#### [梁海斌：一个从囚徒到海员的故事](../../pages/nsc993/n13180304.md) 
 
 ---
 #### 第 [ [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) ] 页
