have a nice day!

--- a/indexes/nsc1025/126.md
+++ b/indexes/nsc1025/126.md
@@ -1,5 +1,16 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】我们的领袖们被驯服了](../../pages/nsc1025/n13208361.md) 
+#### [【名家专栏】中共社会信用系统会进美国吗？](../../pages/nsc1025/n13208338.md) 
+#### [袁斌：胡锡进的恐惧](../../pages/nsc1025/n13207610.md) 
+#### [王赫：韩国研发战术核武器级导弹 暗敲中共](../../pages/nsc1025/n13207465.md) 
+#### [慕岳：百年变局 习近平是在开盘还是收官？](../../pages/nsc1025/n13206516.md) 
+#### [李正宽：习近平磨刀多日 曾庆红寝食难安](../../pages/nsc1025/n13206153.md) 
+#### [杨威：拜登还会为习近平“背书”吗？](../../pages/nsc1025/n13206546.md) 
+#### [王友群：中纪委为何又批“攫取党和国家权力”](../../pages/nsc1025/n13206384.md) 
+#### [【名家专栏】谨慎对待美国房地产界的喧嚣](../../pages/nsc1025/n13205447.md) 
+#### [颜丹：说说“美国已经不是中国留学生首选”](../../pages/nsc1025/n13206297.md) 
+#### [【名家专栏】是美国该反省的时候了](../../pages/nsc1025/n13205426.md) 
 #### [谢田：美中阿富汗困境与亨廷顿的遗珠](../../pages/nsc1025/n13206111.md) 
 #### [【有冇搞错】中国周边紧张 冲突一触即发](../../pages/nsc1025/n13203646.md) 
 #### [石铭：河北衡水多名官员遭恶报在告诉人们什么？](../../pages/nsc1025/n13204729.md) 
@@ -19,17 +30,6 @@
 #### [杨宁：前财政部长金人庆蹊跷死 东窗事发？](../../pages/nsc1025/n13201091.md) 
 #### [王友群：中共咄咄逼人 促日台关系升温](../../pages/nsc1025/n13201291.md) 
 #### [王赫：官媒齐捧一“大字报” 给习近平挖坑？](../../pages/nsc1025/n13200959.md) 
-#### [【名家专栏】美国孩子应回到什么样的学校](../../pages/nsc1025/n13200215.md) 
-#### [【名家专栏】反思20年阿富汗战争](../../pages/nsc1025/n13200255.md) 
-#### [【名家专栏】美国大学内的新种族隔离](../../pages/nsc1025/n13200252.md) 
-#### [【有冇搞错】赵薇和“政治骗子”](../../pages/nsc1025/n13198427.md) 
-#### [沈舟：美军最后一天在阿富汗如何拦截火箭](../../pages/nsc1025/n13199058.md) 
-#### [杨威：布林肯为啥不与王毅谈美中关系](../../pages/nsc1025/n13198603.md) 
-#### [【纪元专栏】应了解特鲁多活动遭强烈抗议的背后原因](../../pages/nsc1025/n13198504.md) 
-#### [王友群：致北京市东城区法院院长赵军的一封信](../../pages/nsc1025/n13198263.md) 
-#### [【名家专栏】美国人口普查数据是笔糊涂账](../../pages/nsc1025/n13197722.md) 
-#### [【名家专栏】台湾应遵守全球自由贸易机制](../../pages/nsc1025/n13197718.md) 
-#### [【名家专栏】警惕中共核突围一直在进行中](../../pages/nsc1025/n13197704.md) 
 
 ---
 #### 第 [ [126](./126.md) / [125](./125.md) / [124](./124.md) / [123](./123.md) / [122](./122.md) / [121](./121.md) / [120](./120.md) / [119](./119.md) ] 页
