--- a/indexes/nsc1028/55.md
+++ b/indexes/nsc1028/55.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [告别进化论](../../pages/nsc1028/n13196066.md) 
+#### [林辉：真“双枪老太婆”抗日反共 中共混淆视听](../../pages/nsc1028/n13208826.md) 
 #### [袁斌：我们从小到大学到的历史哪些是假的（4）](../../pages/nsc1028/n13204742.md) 
 #### [吴明：中共历届“克格勃”的命运（下）](../../pages/nsc1028/n13200899.md) 
 #### [吴明：中共历届“克格勃”的命运（上）](../../pages/nsc1028/n13198300.md) 
@@ -28,8 +30,6 @@
 #### [中共罪行录之四十二：语录对错招来祸](../../pages/nsc1028/n13113015.md) 
 #### [王友琴：文革猛于虎——记文革受难者张为申和谢瑞瑾](../../pages/nsc1028/n13111808.md) 
 #### [苏晓康：垮坝](../../pages/nsc1028/n13109759.md) 
-#### [颜智华：“剿共战争”成派系斗争筹码 红军逃生作乱  ](../../pages/nsc1028/n13109642.md) 
-#### [中共罪行录之四十一：剃光头也有罪](../../pages/nsc1028/n13107819.md) 
 
 ---
 #### 第 [ [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) ] 页
