--- a/indexes/nsc993/61.md
+++ b/indexes/nsc993/61.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】美国最大规模演习发出的讯号](../../pages/nsc993/n13207637.md) 
 #### [【网海拾贝】西方对中共的误判与中共对西方的误判](../../pages/nsc993/n13204854.md) 
 #### [国学大师季羡林关于文革的四个“天问”](../../pages/nsc993/n13204917.md) 
 #### [【网海拾贝】“有钱的缺良心，有良心的缺钱”](../../pages/nsc993/n13202291.md) 
@@ -29,7 +30,6 @@
 #### [请世界各国首脑重温列宁的“绳套”](../../pages/nsc993/n13183266.md) 
 #### [陈达：中共“代表阿富汗人民”解](../../pages/nsc993/n13183050.md) 
 #### [谢燕益：就许娜案致北京市政法委书记](../../pages/nsc993/n13182701.md) 
-#### [【网海拾贝】李克强视察小区，每家每户三个警察](../../pages/nsc993/n13181691.md) 
 
 ---
 #### 第 [ [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) ] 页
